Initial update minio, new filestructure, helm

--- a/ctl/dockerfiles/Dockerfile.self2face
+++ b/ctl/dockerfiles/Dockerfile.self2face
@@ -54,8 +54,9 @@ RUN bash -c "source activate $(cat $ENVIRONMENT | yq -r .name ) &&\
                                          --display-name $(cat $ENVIRONMENT | yq -r .name )"
 
 ## Permissions
-RUN chown ${NB_USER} -R /home/${NB_USER}/
+RUN usermod -aG sudo jovyan &&\
+    chown ${NB_USER} -R /home/${NB_USER}/
 
 ## Final user setup
-USER ${NB_USER}
-CMD ["bash", "-ic", "jupyter notebook --notebook-dir=/home/${NB_USER} --ip=0.0.0.0 --no-browser --port=8888 --NotebookApp.token='' --NotebookApp.password='' --NotebookApp.allow_origin='*' --NotebookApp.base_url=${NB_PREFIX}"]
+#USER ${NB_USER}
+CMD ["bash", "-ic", "source activate $(cat $ENVIRONMENT | yq -r .name ) && jupyter notebook --notebook-dir=/home/${NB_USER} --ip=0.0.0.0 --no-browser --port=8888 --NotebookApp.token='' --NotebookApp.password='' --NotebookApp.allow_origin='*' --NotebookApp.base_url=${NB_PREFIX} --allow-root"]
