--- a/ctl/dockerfiles/Dockerfile.self2face
+++ b/ctl/dockerfiles/Dockerfile.self2face
@@ -57,6 +57,11 @@ RUN bash -c "source activate $(cat $ENVIRONMENT | yq -r .name ) &&\
 RUN usermod -aG sudo jovyan &&\
     chown ${NB_USER} -R /home/${NB_USER}/
 
+## Setup python path on home dir
+RUN touch /home/${NB_USER}/__init__.py
+ENV PYTHONPATH /home/${NB_USER}/:$PYTHONPATH
+
 ## Final user setup
-#USER ${NB_USER}
+ARG user
+USER ${user}
 CMD ["bash", "-ic", "source activate $(cat $ENVIRONMENT | yq -r .name ) && jupyter notebook --notebook-dir=/home/${NB_USER} --ip=0.0.0.0 --no-browser --port=8888 --NotebookApp.token='' --NotebookApp.password='' --NotebookApp.allow_origin='*' --NotebookApp.base_url=${NB_PREFIX} --allow-root"]
